# txlog

./: .clang-format  .gitignore  CMakeLists.txt  README.md
configuration/: logconfig.json
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  backward.cpp  backward.hpp  config.h.in  line.cpp  line.h  log.cpp  log.h  logConfig.cpp  logConfig.h  logDepot.cpp  logDepot.h  logconst.h
unittest/: CMakeLists.txt  README.md  gtest_main.cc
unittest/configuration/: logconfig.json
unittest/test/: logThreadUT.cpp  logUT.cpp
